@@ -6,6 +6,7 @@ CHANGES
 ------------------
 
 - section add form needs title and location (https://launchpad.net/bugs/1042267)
+- Person links in group view return to group
 
 
 2.2.2 (2012-08-31)
